[tool.poetry]
name = "mud-agent-py"
version = "0.1.0"
description = "MudBlazor Source Code and Documentation Agent"
authors = ["Cornelius Donley"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
anthropic = "^0.7.7"
transformers = "^4.35.2"
numpy = "^1.26.2"
claude-retriever = {git = "https://github.com/cddigi/anthropic-retrieval.git"}
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
